--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/mongodb-adapter": "^0.0.2-next.298",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
+    "mongodb": "^4.13.0",
     "next": "13.1.2",
     "next-auth": "^4.18.8",
+    "npm": "^9.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   }
